--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-dimension-v2",
-  "description": "Gatsby Starter - Dimension V2",
+  "name": "Jake Smith",
+  "description": "Jake Smith",
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
